--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,16 @@
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
 
-<p><%= @book.title %></p>
-<p><%= @book.body %></p>
+<% if flash[:alert] %>
+  <p><%= flash[:alert] %></p>
+<% end %>
+
+
+
+<p><strong>Title:</strong><%= @book.title %></p>
+<p><strong>Body:</strong><%= @book.body %></p>
 
 <%= link_to "Edit", edit_book_path(@book) %>
- <%= link_to "Back", books_path %>
+<%= link_to "Back", books_path %>
 
