--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,15 @@
 <h1>Editing Book</h1>
 
 <%= form_for(@book) do |f| %>
+    <% if @book.errors.any? %>
+    <h2><%= @book.errors.count %> error prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+    
    <p>Title</p>
    <%= f.text_field :title %>
    <p>Body</p>
